--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,13 @@ body {
 #clearContainer {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 1rem;
 }
 
+#clear {
+  width: 135px;
+}
 
 #functions {
   display: flex;
